src/objects/DF_Event__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date_Time__c</fullName>
        <label>Event Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Event Ext Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Geographic_Details__c</fullName>
        <label>Location Geographic Details</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Places__c</fullName>
        <label>Number of Places</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordType_Name__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Organiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session Organiser</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>Sessions Organised</relationshipLabel>
        <relationshipName>DF_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Session_Hours__c</fullName>
        <label>Total Session Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wheel_Chair_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wheel Chair Access</label>
        <type>Checkbox</type>
    </fields>
    <label>DF Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Number_of_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Champion_Training_Events</fullName>
        <columns>NAME</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Event_Status__c</columns>
        <columns>City__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Session_Organiser__c</columns>
        <columns>Number_of_Attendees__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DF_Event__c.Champion_Training_Course</value>
        </filters>
        <label>Champion Training Events</label>
    </listViews>
    <listViews>
        <fullName>Dementia_Friend_Awareness_Sessions</fullName>
        <columns>NAME</columns>
        <columns>Event_Date_Time__c</columns>
        <columns>Event_Status__c</columns>
        <columns>City__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Session_Organiser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>DF_Event__c.Dementia_Friend_Awareness_Session</value>
        </filters>
        <label>Dementia Friend Awareness Sessions</label>
    </listViews>
    <nameField>
        <label>DF Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DF Events</pluralLabel>
    <recordTypes>
        <fullName>Champion_Training_Course</fullName>
        <active>true</active>
        <description>Events organised by Alzheimers Society/Trusted Partners</description>
        <label>Champion Training Course</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dementia_Friend_Awareness_Session</fullName>
        <active>true</active>
        <description>Events organised by DF Champions</description>
        <label>Dementia Friend Awareness Session</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>